fix z-index

--- a/src/components/CtaText/CtaText.module.scss
+++ b/src/components/CtaText/CtaText.module.scss
@@ -7,7 +7,6 @@
   text-align: center;
   padding: 0 1rem;
   position: relative;
-  z-index: 1;
 
   &::before {
     content: attr(data-text);
@@ -18,7 +17,7 @@
     height: 100%;
     color: $black;
     overflow: hidden;
-    z-index: 2;
+    z-index: 1;
     clip-path: inset(100% 0 0 0);
     display: flex;
     justify-content: center;
@@ -34,7 +33,6 @@
     width: 100%;
     height: 3px;
     background-color: $primary;
-    z-index: 1;
     transition: height 0.3s ease-in-out;
   }
 
